Fixed some awkward spacing issues for mobile

--- a/source/stylesheets/glow.css.scss
+++ b/source/stylesheets/glow.css.scss
@@ -50,7 +50,6 @@ html, body {
     background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
-    margin-top: 10%;
     height: 50%;
     margin-left: 12%;
     margin-right: 12%;
@@ -58,6 +57,7 @@ html, body {
     @media (min-width: 800px) {
         margin-left: 25%;
         margin-right: 25%;
+        margin-top: 10%;
         width: 50%;
     }
 }
@@ -443,6 +443,8 @@ h5 {
     margin-bottom: 5%;
     margin-top: 8%;
     @media (max-width: 800px) {
+        margin-bottom: 0;
+        margin-top: 0;
         float: none;
         width: 80%;
         margin-left: 10%;
@@ -458,6 +460,7 @@ h5 {
     @media (max-width: 800px) {
         margin-right: 5%;
         width: 90%;
+        margin-top: 0;
     }
 }
 
